--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,1 +1,8 @@
+<nav class="navbar bg-primary">
+    <div class="">
+      <span class="navbar-brand mb-0 h1">Desafio Pontta Sistemas </span>
+      <a routerLink="/users" class="nav-link">Usuários</a>
+      <a routerLink="/products" class="nav-link">Produtos</a>
+    </div>
+</nav>
 <router-outlet></router-outlet>
